--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,11 @@
  Created by https://www.toptal.com/developers/gitignore/api/c++,cmake
 # Edit at https://www.toptal.com/developers/gitignore?templates=c++,cmake
+
 # folder buid
 build/
+
+#ignore vscode folder
+.vscode/
 
 
 ### C++ ###
